added download function

--- a/product.html
+++ b/product.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <a href="/">home</a>
-    <a href="/contact">contact</a>
+    <a href="/file">download</a>
     <a href="/about">about</a>
     <a href="/product">product</a>
     <h1 style="color: red;">Product page</h1>
